--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
         "test": "jest",
         "prisma:init": "npx prisma init",
         "prisma:generate": "npx prisma generate",
+        "prisma:seed": "node scripts/create-admin.js",
         "start:prod": "npm run build && npm start"
     },
     "keywords": [],
@@ -17,8 +18,16 @@
     "license": "ISC",
     "dependencies": {
         "@prisma/client": "^5.13.0",
+        "@types/bcrypt": "^6.0.0",
+        "@types/cors": "^2.8.19",
+        "@types/jsonwebtoken": "^9.0.10",
+        "@types/multer": "^2.0.0",
+        "bcrypt": "^6.0.0",
+        "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
+        "jsonwebtoken": "^9.0.2",
+        "multer": "^2.0.2",
         "swagger-jsdoc": "^6.2.8",
         "swagger-ui-express": "^5.0.0"
     },
